--- a/MyApplication6/app/src/main/res/layout/content_parkingslots.xml
+++ b/MyApplication6/app/src/main/res/layout/content_parkingslots.xml
@@ -8,4 +8,121 @@
     tools:context="com.example.ab.myapplication.Parkingslots"
     tools:showIn="@layout/activity_parkingslots">
 
+    <TableLayout
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        tools:layout_editor_absoluteX="-21dp"
+        tools:layout_editor_absoluteY="30dp">
+
+        <TableRow
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
+
+            <Button
+                android:id="@+id/bt1"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="1"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt2"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="2"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt3"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="3"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt4"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="4"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
+
+            <Space
+                android:layout_width="80dp"
+                android:layout_height="100dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="200dp"
+            android:layout_height="300dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
+
+            <Button
+                android:id="@+id/bt5"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="5"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt6"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="6"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt7"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="7"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt8"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="8"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/bt9"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
+                android:background="@android:color/holo_green_dark"
+                android:text="9"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+    </TableLayout>
 </android.support.constraint.ConstraintLayout>
