--- a/MyApplication6/app/src/main/res/layout/activity_prakingground.xml
+++ b/MyApplication6/app/src/main/res/layout/activity_prakingground.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ab.myapplication.Prakingground">
+    tools:context="com.example.ab.myapplication.ParkingGround">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
