--- a/MyApplication6/app/src/main/res/layout/content_prakingground.xml
+++ b/MyApplication6/app/src/main/res/layout/content_prakingground.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ab.myapplication.Prakingground"
+    tools:context="com.example.ab.myapplication.ParkingGround"
     tools:showIn="@layout/activity_prakingground">
 
     <TableLayout
